--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:user-db}:3306/${DB_DATABASE:user}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:users-db}:3306/${DB_DATABASE:users}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
